# MusicTiles

./: .gitignore  CMakeLists.txt  Makefile  README.md  list.c  list.h  main.c  sound.c  sound.h
audio/: readme.txt
sheet/: 7-years-lukas-graham.txt  a-dream-is-a-wish-your-heart-makes-cinderella-disney.txt  a-million-dreams-the-greatest-showman.txt  a-spoonful-of-sugar-mary-poppins-julie-andrews-disney.txt  a-thousand-years-christina-perri.txt  aint-no-sunshine-bill-withers.txt  all-i-ask-of-you-phantom-of-the-opera.txt  all-i-want-for-christmas-is-you-mariah-carey.txt  all-of-me-john-legend.txt  all-star-smash-mouth.txt  all-you-need-is-love-the-beatles.txt  almost-there-princess-and-the-frog-disney.txt  amazing-grace-traditional.txt  american-pie-don-mclean.txt  angel-of-music-phantom-opera.txt  angels-we-have-heard-on-high-traditional.txt  auld-lang-syne-traditional.txt  away-in-a-manger-traditional.txt  baa-baa-black-sheep-traditional.txt  baby-justin-bieber.txt  baby-shark-pinkfong.txt  bring-me-to-life-evanescence.txt  burn-hamilton.txt  call-me-maybe-carly-rae-jepsen.txt  can-you-feel-the-love-tonight-elton-john.txt  cant-help-falling-in-love-elvis-presley.txt  careless-whisper-george-michael.txt  carol-bells-traditional.txt  chandelier-sia.txt  chim-chim-cher-ee-mary-poppins.txt  clint-eastwood-gorillaz.txt  colors-wind-pocahontas-disney.txt  come-as-you-are-nirvana.txt  copycat-billie-eilish.txt  count-on-me-bruno-mars.txt  counting-stars-one-republic.txt  deck-the-halls-traditional.txt  demons-imagine-dragons.txt  despacito-luis-fonsi-feat-justin-bieber.txt  (+161 more)
(+10 files in other folders)
